--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="player-1"></span>
             <span class="player-2"></span>
         </div>
-        <div class="grid">
+        <div class="grids">
         </div>
     </div>
     <script src="./find_me.js"></script>
